leaderboard #'s, collapse/expand details, hamburger button, like button fix

--- a/functions/styles/searchMap.css
+++ b/functions/styles/searchMap.css
@@ -86,9 +86,9 @@ h1 {
     border-radius: 4px;
     background-color:rgb(247, 247, 247);
     margin: auto;
-    height: 81%;
+    /* height: 81%; */
     max-width: 475px;
-    max-height:320px;
+    /*max-height:320px;*/
     /*min-height:320px;*/
     overflow-y:hidden;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
@@ -98,7 +98,7 @@ h1 {
 #trees-near-header, #trees-content-header, #tree-name {
     color:gray;
     font-size:110%;
-    margin:10px;
+    padding:10px;
     height:20px;
     display:block;
 
@@ -111,9 +111,9 @@ h1 {
     border-radius: 4px;
     background-color:white;
     margin: auto;
-    height: 100%;
+    /* height: 100%; */
     max-width: 475px;
-    max-height:300px;
+    /* max-height: 60vh; */
     overflow-y:auto;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
     pointer-events: all;
@@ -218,8 +218,8 @@ button {
     overflow-y: scroll;
     padding-right:1em;
     padding-left: 1em;
-    max-height:100%;
-    height:198px;
+    max-height:60vh;
+    /* height:198px; */
 }
 
 button:hover {
@@ -590,6 +590,9 @@ input::placeholder {
     bottom: 82px;
     right:0.5em;
     height:30px;
-    pointer-events:none;
     display:none;
+}
+
+.normalMainHeight {
+    height: 198px;
 }
